<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4bbee3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/titleSettings"
        android:layout_width="375dp"
        android:layout_height="177dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openCamButton"
        android:layout_width="239dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:background="#332a9f"
        android:text="@string/openCamera"
        android:textColor="#4bbee3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchUser" />

    <Button
        android:id="@+id/placeOfWalls"
        android:layout_width="239dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#332a9f"
        android:text="@string/placesOfWalls"
        android:textColor="#4bbee3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openCamButton" />

    <Button
        android:id="@+id/settingsBut"
        android:layout_width="239dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#332a9f"
        android:text="@string/settings"
        android:textColor="#4bbee3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeOfWalls" />

    <Button
        android:id="@+id/helpBut"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#332a9f"
        android:text="@string/help"
        android:textColor="#4bbee3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/searchBut"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        android:background="#4bbee3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search_button" />

    <ImageButton
        android:id="@+id/logoutBut"
        android:layout_width="77dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#4bbee3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <EditText
        android:id="@+id/searchUser"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="264dp"
        android:ems="10"
        android:hint=" search username "
        android:inputType="textPersonName"
        android:textColorHint="#332a9f"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/searchBut"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:textColor="#332A9F"
        app:layout_constraintEnd_toStartOf="@+id/logoutBut"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>